0.9.0/_sources/generated/statsmodels.discrete.discrete_model.NegativeBinomialP.rst.txt
statsmodels.discrete.discrete_model.NegativeBinomialP
=====================================================

.. currentmodule:: statsmodels.discrete.discrete_model

.. autoclass:: NegativeBinomialP

   

   
   .. rubric:: Methods

   .. autosummary::
      :toctree:
   
    
    
      ~NegativeBinomialP.cdf
    
    
      ~NegativeBinomialP.convert_params
    
    
      ~NegativeBinomialP.cov_params_func_l1
    
    
      ~NegativeBinomialP.fit
    
    
      ~NegativeBinomialP.fit_regularized
    
    
      ~NegativeBinomialP.from_formula
    
    
      ~NegativeBinomialP.hessian
    
    
      ~NegativeBinomialP.information
    
    
      ~NegativeBinomialP.initialize
    
    
      ~NegativeBinomialP.loglike
    
    
      ~NegativeBinomialP.loglikeobs
    
    
      ~NegativeBinomialP.pdf
    
    
      ~NegativeBinomialP.predict
    
    
      ~NegativeBinomialP.score
    
    
      ~NegativeBinomialP.score_obs
    
   
   

   
   
   .. rubric:: Attributes

   .. autosummary::
   
      ~NegativeBinomialP.endog_names
      ~NegativeBinomialP.exog_names
   
   