v0.10.2/_sources/generated/statsmodels.discrete.discrete_model.NegativeBinomialP.rst.txt
statsmodels.discrete.discrete\_model.NegativeBinomialP
======================================================

.. currentmodule:: statsmodels.discrete.discrete_model

.. autoclass:: NegativeBinomialP

   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         NegativeBinomialP.cdf
         NegativeBinomialP.convert_params
         NegativeBinomialP.cov_params_func_l1
         NegativeBinomialP.fit
         NegativeBinomialP.fit_regularized
         NegativeBinomialP.from_formula
         NegativeBinomialP.hessian
         NegativeBinomialP.information
         NegativeBinomialP.initialize
         NegativeBinomialP.loglike
         NegativeBinomialP.loglikeobs
         NegativeBinomialP.pdf
         NegativeBinomialP.predict
         NegativeBinomialP.score
         NegativeBinomialP.score_obs



   

   .. HACK -- the point here is that we don't want this to appear in the output, but the autosummary should still generate the pages.
      .. autosummary::
         :toctree:
      
         NegativeBinomialP.endog_names
         NegativeBinomialP.exog_names

